--- a/src/main/java/com/mycompany/studymind/igu/SignUp.form
+++ b/src/main/java/com/mycompany/studymind/igu/SignUp.form
@@ -269,7 +269,7 @@
                       <Font name="Roboto" size="14" style="0"/>
                     </Property>
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="33" green="33" red="ff" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Login"/>
                   </Properties>
@@ -311,7 +311,7 @@
         <Container class="javax.swing.JPanel" name="Right">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="66" red="0" type="rgb"/>
+              <Color blue="82" green="6d" red="52" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[400, 500]"/>
